packages/fluent/scss/colorgradient/_layout.scss
@use "../core" as *;
@use "_variables.scss" as *;

@mixin kendo-colorgradient--layout() {

    // ColorGradient
    .k-colorgradient {
        @include border-radius( var( --kendo-colorgradient-border-radius, #{$kendo-colorgradient-border-radius} ) );
        width: var( --kendo-colorgradient-width, #{$kendo-colorgradient-width} );
        padding-inline: var( --kendo-colorgradient-padding-x, #{$kendo-colorgradient-padding-x} );
        padding-block: var( --kendo-colorgradient-padding-y, #{$kendo-colorgradient-padding-y} );
        border-style: solid;
        border-width: var( --kendo-colorgradient-border-width, #{$kendo-colorgradient-border-width} );
        box-sizing: border-box;
        outline: 0;
        font-size: var( --kendo-colorgradient-font-size, #{$kendo-colorgradient-font-size} );
        font-family: var( --kendo-colorgradient-font-family, #{$kendo-colorgradient-font-family} );
        line-height: var( --kendo-colorgradient-line-height, #{$kendo-colorgradient-line-height} );
        display: flex;
        flex-direction: column;
        align-items: stretch;
        gap: var( --kendo-colorgradient-spacing, #{$kendo-colorgradient-spacing} );
        -webkit-touch-callout: none;
        -webkit-tap-highlight-color: $rgba-transparent;

        *,
        *::before,
        *::after {
            box-sizing: border-box;
        }
    }

    // Canvas
    .k-colorgradient-canvas {
        gap: var( --kendo-colorgradient-canvas-spacing, #{$kendo-colorgradient-canvas-spacing} );

        .k-hsv-rectangle {
            @include border-radius( var( --kendo-colorgradient-canvas-border-radius, #{$kendo-colorgradient-canvas-border-radius} ) );
            border-width:  var( --kendo-colorgradient-canvas-border-width, #{$kendo-colorgradient-canvas-border-width} );
            border-style: solid;
            position: relative;
            flex: 1 1 auto;
            user-select: none;
        }

        .k-hsv-gradient {
            @include border-radius( var( --kendo-colorgradient-canvas-border-radius, #{$kendo-colorgradient-canvas-border-radius} ) );
            height: var( --kendo-colorgradient-canvas-rectangle-height, #{$kendo-colorgradient-canvas-rectangle-height} );
        }

        .k-hsv-draghandle {
            margin-block-start: var( --kendo-colorgradient-canvas-draghandle-offset-y, #{$kendo-colorgradient-canvas-draghandle-offset-y} );
            margin-inline-start: var( --kendo-colorgradient-canvas-draghandle--offset-x, #{$kendo-colorgradient-canvas-draghandle-offset-x} );
            position: absolute;
            top: 50%;
            left: 50%;
            z-index: 10;
            background-color: transparent;
            cursor: pointer;
        }

        .k-hsv-controls {
            position: relative;
            flex-shrink: 0;
            gap: var( --kendo-colorgradient-canvas-spacing, #{$kendo-colorgradient-canvas-spacing} );
        }
    }

    // DragHandle
    .k-colorgradient .k-draghandle {
        width: var( --kendo-colorgradient-draghandle-width, #{$kendo-colorgradient-draghandle-width} );
        height: var( --kendo-colorgradient-draghandle-height, #{$kendo-colorgradient-draghandle-height} );
        border-width: var( --kendo-colorgradient-draghandle-border-width, #{$kendo-colorgradient-draghandle-border-width} );
        box-sizing: border-box;
    }

    // Sliders
    .k-colorgradient-slider {

        &.k-slider-vertical {
            width: var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} );
            height: var( --kendo-colorgradient-slider-vertical-size, #{$kendo-colorgradient-slider-vertical-size} );
            flex: 0 0 var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} );
        }
        &.k-slider-vertical .k-slider-track {
            width: var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} );
            border-radius: var( --kendo-colorgradient-slider-border-radius, #{$kendo-colorgradient-slider-border-radius} );
            margin-inline-start: calc( -1 * (var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} ) / 2) );
        }

        &.k-slider-horizontal {
            width: var( --kendo-colorgradient-slider-horizontal-size, #{$kendo-colorgradient-slider-horizontal-size} );
            height: var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} );
            flex: 0 0 var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} );
        }
        &.k-slider-horizontal .k-slider-track {
            height: var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} );
            border-radius: var( --kendo-colorgradient-slider-border-radius, #{$kendo-colorgradient-slider-border-radius} );
            margin-block-start: calc( ( var( --kendo-colorgradient-slider-track-size, #{$kendo-colorgradient-slider-track-size} ) / 2 ) * -1 );
        }

        &.k-alpha-slider .k-slider-track::before {
            content: "";
            width: 100%;
            height: 100%;
            display: block;
            border-radius: 2px;
            position: relative;
            z-index: -1;
        }

        .k-slider-track {
            border-width:  var( --kendo-colorgradient-slider-border-width, #{$kendo-colorgradient-slider-border-width} );
            border-style: solid;
            transform: none;
            z-index: auto;
        }

        .k-slider-wrap,
        .k-slider-track-wrap {
            z-index: 1;
        }

        .k-slider-selection {
            display: none;
        }

    }

    // Inputs
    .k-colorgradient-inputs {
        gap: var( --kendo-colorgradient-input-spacing, #{$kendo-colorgradient-input-spacing} );

        .k-colorgradient-input-label {
            font-size: var( --kendo-colorgradient-input-label-font-size, #{$kendo-colorgradient-input-label-font-size} );
            text-transform: uppercase;
        }

        > .k-vstack {
            gap: var( --kendo-colorgradient-input-label-spacing, #{$kendo-colorgradient-input-label-spacing} );
        }

        .k-numerictextbox {
            width: var( --kendo-colorgradient-input-width, #{$kendo-colorgradient-input-width} );
        }
    }

    // Contrast
    .k-colorgradient-color-contrast {

        > div {
            display: flex;
            flex-flow: row nowrap;
            gap: var( --kendo-colorgradient-contrast-spacing, #{$kendo-colorgradient-contrast-spacing} );
        }

        .k-contrast-ratio {
            margin-block-end: var( --kendo-colorgradient-contrast-spacing, #{$kendo-colorgradient-contrast-spacing} );
        }

        .k-contrast-ratio-text {
            font-weight: var( --kendo-colorgradient-contrast-ratio-font-weight, #{$kendo-colorgradient-contrast-ratio-font-weight} );
        }

        .k-contrast-validation {
            display: inline-flex;
            align-items: center;
            gap: calc( var( --kendo-colorgradient-contrast-spacing,  #{$kendo-colorgradient-contrast-spacing} ) / 2 );

            .k-icon {
                vertical-align: middle;
            }

            // Needed for the double check icons
            .k-icon + .k-icon {
                margin-inline-start: -13px;
            }
        }
    }
    .k-color-contrast-svg {
        position: absolute;
        top: 0;
        left: 0;
        overflow: visible;
        pointer-events: none;
    }

}

